<resources>
    <string name="app_name">TrucksInspect</string>


    <string name="btn_iniciar_pantalla">Iniciar Sesión</string>
    <string name="btn_registro_pantalla">Registrarse</string>

    <string name="btn_iniciarSesion">Iniciar Sesión</string>
    <string name="btn_registrar">Registrar</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario de Prueba</string>
    <string name="nav_header_subtitle">hola@hola.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_ticket">Crear Reporte</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_abierto">Abiertos</string>
    <string name="menu_cerrado">Cerrados</string>
    <string name="menu_progreso">En progreso</string>
    <string name="menu_pendientes">Pendientes</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_CerrarSesion">Cerrar Sesión</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="cerrar_sesion">La sesión actual se cerrará </string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>


    <!--    AGREGAR REPORTE-->
    <string name="NombreTxtReportes">Nombre de imagen</string>
    <string name="NombreReporte">Escriba nombre aqui</string>
    <string name="FechaReportes">0</string>
    <string name="PublicarReporte"> Publicar </string>
    <!--ITEM REPORTE-->
    <string name="NombreImagenReporte"> -- </string>
    <string name="FechaReporte"> -- </string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_admin2">AdminActivity2</string>
    <string name="title_activity_bar_admin">BarAdmin</string>
    <string name="title_activity_bar_admin22">BarAdminActivity22</string>
    <string name="title_activity_navigation_admin_bar">NavigationAdminBar</string>

    <!--  IMAGEN DETALLE  -->

    <string name="NombreImagenTXT">Unidad</string>
    <string name="NombreImagenDetalle"> -- </string>
    <string name="VisualizacionTXT">Visualizaciones</string>
    <string name="VistaDetalle"> -- </string>
    <string name="OperadorTXT"> Operador:  </string>
    <string name="NombreOperadorDetalle"> -- </string>
    <string name="UltViajeTXT"> Ultimo Viaje:  </string>
    <string name="NombreViajeDetalle"> -- </string>
    <string name="DescripcionTXT"> Descripcion:  </string>
    <string name="NombreDescripcionDetalle"> -- </string>


</resources>