<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ReporteDetalle">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/NombreImagenTXT"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/NombreImagenDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/NombreImagenDetalle"
            android:textColor="#000"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImagenDetalleReporte"
            android:layout_width="450dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:src="@drawable/detalle_imagen" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="Fecha: "
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/VistaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/VistaDetalle"
                android:textColor="#000"
                android:textSize="22dp"
                android:layout_marginLeft="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/OperadorTXT"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/NombreOperador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/NombreOperadorDetalle"
                android:textColor="#000"
                android:textSize="22dp"
                android:layout_marginLeft="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/UltViajeTXT"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/NombreUltimoViaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/NombreViajeDetalle"
                android:textColor="#000"
                android:textSize="22dp"
                android:layout_marginLeft="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/DescripcionTXT"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/NombreDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/NombreDescripcionDetalle"
                android:textColor="#000"
                android:textSize="22dp"
                android:layout_marginLeft="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>