<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="150dp"
            android:text="@string/cerrar_sesion"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:text="¿Estás seguro?"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25dp" />

        <Button
            android:id="@+id/buttonAdminAceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="10dp"
            android:onClick="clicAceptarAdmin"
            android:text="@string/btn_aceptar" />

        <Button
            android:id="@+id/btn_cancelarAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/btn_cancelar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>